# GeoLift

./: README.md
doc/: multicell_flow.mmd
examples/: example_data.csv
python/: Makefile  README.md  examples.py  pyproject.toml
python/geolift/: __init__.py  market_selection.py  synthetic_control.py
python/src/geolift/: __init__.py  data.py  market_selection.py  modeling.py  multicell.py  power.py  streamlit_app.py
python/tests/: conftest.py  test_data.py  test_market.py  test_market_selection.py  test_modeling.py  test_multicell.py  test_power.py  test_synthetic_control.py
