[project]
name = "geolift"
version = "0.1.0"
description = "Python port of the GeoLift package"
authors = [
    {name = "GeoLift Python Port"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.4",
    "numpy>=1.22",
    "pymc>=5.0",
    "xarray>=2023.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
